<resources>
    <string name="app_name">SocialMBS</string>
    <string name="title">MBS-FORYOU</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_login">Already have an account ? login</string>
    <string name="create_an_account">Create an account</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="add">Add</string>
    <string name="favourite">Favourite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notification">Notification</string>
    <string name="post">POST</string>
    <string name="description">Description</string>
    <string name="full_name">Full Name</string>
    <string name="username">userName</string>
    <string name="follow">Follow</string>
    <string name="_256_post">256 Post</string>
    <string name="tag">#Tag</string>
    <string name="comments">Comments</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="following">FOLLOWING</string>
    <string name="followers">FOLLOWERS</string>
    <string name="save">SAVE</string>
    <string name="bio">Bio</string>
    <string name="change_photo">Change Photo</string>
    <string name="welcome_message">You cant see any post now </string>
    <string name="welcome_message1"> please follow Friends to see their post</string>
    <string name="lastmessage">lastMessage</string>
    <string name="enter_your_message">Enter Your message</string>
</resources>