<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".EditProfileActivity">
    <RelativeLayout
        android:layout_width="match_parent"
      android:padding="5dp"
        android:background="@color/backGroundColor"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/close_icon"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:id="@+id/close"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:textSize="18sp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_toEndOf="@id/close"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_marginEnd="10dp"
            android:textSize="18sp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:textColor="@color/colorPrimaryDark"
            android:id="@+id/save"/>

    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:padding="10dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/mig_pp"
            android:layout_gravity="center"
            android:id="@+id/image_profile"
            android:layout_margin="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_photo"
            android:layout_gravity="center"
            android:id="@+id/change_photo"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fullname"
            android:hint="@string/full_name"
            android:layout_marginTop="20dp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/username"
            android:hint="@string/username"
            android:layout_marginTop="20dp"
           />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bio"
            android:hint="@string/bio"
            android:layout_marginTop="20dp"
           />

    </LinearLayout>
</LinearLayout>