<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backGroundColor"
    android:gravity="center"
    tools:context=".StartActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
         android:layout_margin="15dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="25dp"
                app:srcCompat="@drawable/reg_ac" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:fontFamily="@font/aclonica"
                android:text="@string/title"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/loginBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_marginBottom="5dp"
                android:backgroundTint="@color/backGroundColor"
                android:onClick="goLogInAccount"
                android:text="@string/login"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/registerBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_marginBottom="5dp"
                android:textColor="@color/black"
                android:backgroundTint="@color/backGroundColor"
                android:onClick="goRegisterAccount"
                android:text="@string/register"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>