<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backGroundColor"
    tools:context=".RegisterActivities">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            app:cardElevation="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="25dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginBottom="10dp"
                    app:srcCompat="@drawable/log_pp" />

                <EditText
                    android:id="@+id/etx_sign_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edit_text_background"
                    android:ems="10"
                    android:hint="@string/username"
                    android:inputType="textPersonName"
                    android:padding="8dp" />

                <EditText
                    android:id="@+id/etx_sign_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edit_text_background"
                    android:ems="10"
                    android:hint="@string/full_name"
                    android:inputType="text"

                    android:padding="8dp" />

                <EditText
                    android:id="@+id/etx_sign_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edit_text_background"
                    android:ems="10"

                    android:hint="email"
                    android:inputType="textEmailAddress"
                    android:padding="8dp"

                    android:textColor="@color/black" />


                <EditText
                    android:id="@+id/etx_sign_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edit_text_background"
                    android:ems="10"
                    android:hint="password"
                    android:inputType="textPassword"

                    android:padding="8dp" />

                <Button
                    android:id="@+id/signup_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/backGroundColor"
                    android:onClick="goFirebaseRegisterAccount"
                    android:text="@string/register"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/go_log_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="#00000000"
                    android:onClick="gofromRegtoLogInActivities"
                    android:text="@string/already_have_an_account_login"
                    android:textColor="@color/black" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>